--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
                                 frameworkUrl: 'Build/Game-SpaceRaingers.framework.js',
                                 codeUrl: 'Build/Game-SpaceRaingers.wasm',
                                 streamingAssetsUrl: 'StreamingAssets',
-                                companyName: 'Neon Ants',
+                                companyName: 'Queue Bend',
                                 productName: 'Space Ranigers',
-                                productVersion: '1.0.1',
+                                productVersion: '1.0.1.1',
                                 // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
                                 // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
                             },
