--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 margin: 0px;
             }
             .fullscreen {
-                background: #000000;
+                background: #FFFFFF;
                 width: 100%;
                 height: 100%;
                 position: absolute;
@@ -44,14 +44,14 @@
                 width: 90%;
                 max-width: 250px;
                 height: 20px;
-                background: #000000;
+                background: #705F7F;
                 padding: 5px;
             }
             #progress-bar-fill {
                 border-radius: 3px;
                 width: 0%;
                 height: 100%;
-                background: #000000;
+                background: #FFFFFF;
             }
         </style>
     </head>
@@ -147,13 +147,13 @@
                         createUnityInstance(
                             canvas,
                             {
-                                dataUrl: 'Build/Game-SpaceRaingers.data',
-                                frameworkUrl: 'Build/Game-SpaceRaingers.framework.js',
-                                codeUrl: 'Build/Game-SpaceRaingers.wasm',
+                                dataUrl: 'Build/Game-SpaceRaingers.data.unityweb',
+                                frameworkUrl: 'Build/Game-SpaceRaingers.framework.js.unityweb',
+                                codeUrl: 'Build/Game-SpaceRaingers.wasm.unityweb',
                                 streamingAssetsUrl: 'StreamingAssets',
                                 companyName: 'Queue Bend',
                                 productName: 'Space Ranigers',
-                                productVersion: '1.0.1.1',
+                                productVersion: '1.1.0.0',
                                 // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
                                 // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
                             },
